# Probe

./: .gitignore  DESIGN.md  README.md  criteria.md  goal.md  prompt-system.md  pyproject.toml
.github/workflows/: test.yml
benchmarks/: README.md  bug_suite.json  results-deepseek.txt  results.txt  run_benchmark.py
docs/: adding_languages.md  architecture.md  hypothesis_engine.md
examples/: basic_usage.py  mcp_integration.md
plan/: html-report-polish.md  trace-replay.md
src/probe/: __init__.py  cli.py  config.py  fix_generator.py  hypothesis.py  mcp_server.py  orchestrator.py  pytest_plugin.py  report.py  tracer.py
src/probe/dap/: __init__.py  client.py  protocol.py
src/probe/dap/adapters/: __init__.py  (+2 more)
src/probe/llm/: __init__.py  anthropic_client.py  base.py  deepseek_client.py
src/probe/memory/: __init__.py  session_store.py
src/probe/tools/: __init__.py  debug_tools.py  git_tools.py  registry.py  source_tools.py  test_tools.py
tests/: conftest.py  test_dap_client.py  test_html_report.py  test_hypothesis.py  test_orchestrator.py  test_tracer.py
tests/demo_projects/data_cli/: cli.py  processor.py  sample_data.csv
tests/demo_projects/task_service/: models.py  server.py  service.py
tests/fixtures/import_error/: README.md  common.py  parser.py  test_parser.py
tests/fixtures/null_reference/: README.md  finder.py  test_finder.py
tests/fixtures/off_by_one/: README.md  slicer.py  test_slicer.py
tests/fixtures/type_mismatch/: README.md  calculator.py  test_calculator.py
tests/fixtures/wrong_return_value/: README.md  pricing.py  test_pricing.py
